# claude-hub

./: .gitignore  .gitleaksignore  CLAUDE.md  ISSUES.md  KNOWN_ISSUES.md  LICENSE  PROVENANCE.md  README.md  deploy.yaml  publish.yaml  pyproject.toml
config/: review_models.yaml
demo/: README.md  continuous-claude-minimal.md  continuous-claude-setup.html  index.html  neural-stream.html  polymarket-analysis.html
docs/: agent-architecture-design.md  architecture.md  context-management-patterns.md  delegation-system.md  mcp-tools.md  multi-model-registry.md  non-mcp-facilities.md
docs/design/: notes-review-grading-consensus-problem.md  notes-review-grading-improvement-options.md  notes-standard-vs-homebrew-exploration.md  ontology.md  vision-component-ownership.md  (+4 more)
migrations/: 001_initial_schema.sql  002_reviews.sql  003_model_forward.sql  004_knowledge_quality.sql  005_connectors.sql  006_finance.sql
scripts/: generate_credentials.py  github-mirror-sync.sh  migrate_sqlite_to_postgres.py  mint_local_token.py
tests/: test_artifact_store.py  test_authorize_owner_auth.py  test_chat_process.py  test_connectors.py  test_continuity.py  test_continuity_ingest.py  test_conversation_store.py  test_database.py  test_embedding.py  test_endpoint_auth.py  test_group_poll.py  test_knowledge_log.py  test_knowledge_quality.py  test_mcp_manifest.py  test_message_router.py  test_process_launcher.py  test_review_cli.py  test_review_engine.py  test_review_enhanced.py  test_storage.py  test_subprocess_env.py  test_tool_usage_logging.py  test_work_graph_forwarders.py  test_workspace.py
(+126 files in other folders)
