[project]
name = "claude-hub"
version = "0.1.0"
description = "MCP server for persistent Claude Code backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "fastapi-mcp>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "websockets>=12.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.setuptools.package-data]
claude_hub = ["static/**", "templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
